--- a/rorschach_Website/templates/homepage/homepage.html
+++ b/rorschach_Website/templates/homepage/homepage.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- W3.CSS Template. Template pego em view-source:https://www.w3schools.com/w3css/tryw3css_templates_parallax.htm-->
 <html>
 <title>Rorschach</title>
 <meta charset="UTF-8">
@@ -276,7 +277,7 @@ body, html {
     <i class="fa fa-twitter w3-hover-opacity"></i>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
   </div>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">GAMDEV</a></p>
+  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">W3.CSS</a></p>
 </footer>
  
 <!-- Add Google Maps -->
