--- a/rorschach_Website/templates/homepage/homepage.html
+++ b/rorschach_Website/templates/homepage/homepage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- W3.CSS Template. Template pego em view-source:https://www.w3schools.com/w3css/tryw3css_templates_parallax.htm-->
+<!-- W3.CSS Template. Disponivel em view-source:https://www.w3schools.com/w3css/tryw3css_templates_parallax.htm-->
 <html>
 <title>Rorschach</title>
 <meta charset="UTF-8">
