--- a/rorschach_Website/templates/homepage/Register.html
+++ b/rorschach_Website/templates/homepage/Register.html
@@ -12,41 +12,45 @@
 
 <div class="w3-container w3-half w3-margin-top">
 
-<form class="w3-container w3-card-4" action="/SingUp/">
+<form class="w3-container w3-card-4" action="/SingUp/" method="post">
 
 <p>
-<input class="w3-input" type="text" style="width:90%" required>
-<label>Name</label></p>
+<input id="username" class="w3-input" type="text" name="username" style="width:90%" required>
+<label for="username" >Name</label></p>
 <p>
-<input class="w3-input" type="password" style="width:90%" required>
+<input id="password" class="w3-input" type="password" name="password" style="width:90%" required>
 <label>Password</label></p>
 
 <p>
-<input class="w3-input" type="number" style="width:90%" required>
+<input id="age" class="w3-input" type="number" name="age" style="width:90%" required>
 <label>age</label></p>
 
 <p>
-<input class="w3-input" type="text" style="width:90%" required>
+<input id="email_account" name="email_account" class="w3-input" type="text" style="width:90%" required>
 <label>email account</label></p>
 
 <p>
-<input class="w3-input" type="text" style="width:90%" required>
+<input id="country" name="country" class="w3-input" type="text" style="width:90%" required>
 <label>country</label></p>
 
 <p>
-<input class="w3-input" type="text" style="width:90%" required>
+<input id="home_state_adress" name="home_state_adress" class="w3-input" type="text" style="width:90%" required>
 <label>home state adress</label></p>
 
 <p>
-<input class="w3-input" type="text" style="width:90%" required>
+<input id="religion" name="religion" class="w3-input" type="text" style="width:90%" required>
 <label>religion</label></p>
 
 <p>
-<input class="w3-input" type="text" style="width:90%" required>
-<label>civil status</label></p>
+<input name="civil_status" class="w3-radio" type="radio" value="single" checked>
+<label>Single</label></p>
 
 <p>
-<input class="w3-input" type="text" style="width:90%" required>
+<input  name="civil_status" class="w3-radio" type="radio" value="married" >
+<label>Married</label></p>
+
+<p>
+<input id="profession" name="profession" class="w3-input" type="text" style="width:90%" required>
 <label>profession</label></p>
 
 <p>
@@ -58,8 +62,8 @@
 <label>Female</label></p>
 
 <p>
-<input class="w3-radio" type="radio" name="gender" value="" disabled>
-<label>Don't know (Disabled)</label></p>
+<input class="w3-radio" type="radio" name="gender" value="other" >
+<label>Other </label></p>
 
 <p>
 <input id="milk" class="w3-check" type="checkbox" checked="checked">
