--- a/rorschach_Website/templates/homepage/Register.html
+++ b/rorschach_Website/templates/homepage/Register.html
@@ -37,7 +37,7 @@
 <label>country</label></p>
 
 <p>
-<input id="home_state_adress" name="home_state_adress" class="w3-input" type="text" style="width:90%" required>
+<input id="home_state_adress" name="home_state_address" class="w3-input" type="text" style="width:90%" required>
 <label>home state adress</label></p>
 
 <p>
