--- a/rorschach_Website/templates/homepage/myAccount.html
+++ b/rorschach_Website/templates/homepage/myAccount.html
@@ -12,53 +12,13 @@
 
 <div class="w3-container w3-half w3-margin-top">
 
-<form class="w3-container w3-card-4" action="." method="post">
+<form action="{% url 'homepage:perfil' pk%}" class="w3-container w3-card-4" method="post">
 {% csrf_token %}
-<p>
-<input id="name" class="w3-input" type="text" name="name" style="width:90%" value='{{UserInfo.name}}' required>
-<label for="name" >Name</label></p>
-<p>
-<input id="username" class="w3-input" type="text" name="username" style="width:90%" value ='{{UserInfo.username}}' required>
-<label for="username" >Username</label></p>
-<p>
-<input id="password" class="w3-input" type="password" name="password" style="width:90%" value ='{{UserInfo.password}}' required>
-<label>Password</label></p>
-
-<p>
-<input id="age" class="w3-input" type="number" name="age" style="width:90%" value ='{{UserInfo.age}}' required>
-<label>age</label></p>
-
-<p>
-<input id="email_account" name="email_account" class="w3-input" type="text" style="width:90%" value ='{{UserInfo.email_account}}' required>
-<label>email account</label></p>
-
-<p>
-<input id="country" name="country" class="w3-input" type="text" style="width:90%" value ='{{UserInfo.country}}' required>
-<label>country</label></p>
-
-<p>
-<input id="home_state_adress" name="home_state_address" class="w3-input" type="text" style="width:90%" value ='{{UserInfo.home_state_address}}' required>
-<label>home state adress</label></p>
-
-<p>
-<input id="religion" name="religion" class="w3-input" type="text" style="width:90%" value ='{{UserInfo.religion}}' required>
-<label>religion</label></p>
-
-<p>
-<input id="civil_status" name="civil_status" class="w3-input" type="text" style="width:90%" value ='{{UserInfo.civil_status}}' required>
-<label>civil status</label>
-</p>
-<p>
-<input id="gender" name="gender" class="w3-input" type="text" style="width:90%" value ='{{UserInfo.gender}}' required>
-<label>gender</label></p>
-<p>
-<input id="music_like" name="music_like" class="w3-input" type="text" style="width:90%" value ='{{UserInfo.music_like}}' >
-<label>music like</label></p>
-<p>
-<button class="w3-button w3-section w3-teal w3-ripple"> Save </button></p>
-
+    {{form.as_p}}
+    <input type="submit" value="Update" name='_save'/>
+ 
 </form>
-
+<button onclick="location.href='{% url 'homepage:perfil' pk %}'" class="w3-button w3-section w3-teal w3-ripple"> Get Back </button></p>
 </div>
 
 </body>
