Correção de Bugs e melhorias de URLS
As URLs estão simplificadas e sem repetições, subtitui todas as hardcoded por referência. Havia bug no template por haver diferença entre letras maiúsculas e minúsculas, que é diferenciado no linux mas não no windows. Havia bug no campo state_address, que faltava um d no nome

--- a/rorschach_Website/templates/homepage/register.html
+++ b/rorschach_Website/templates/homepage/register.html
@@ -37,7 +37,7 @@
 <label>country</label></p>
 
 <p>
-<input id="home_state_address" name="home_state_address" class="w3-input" type="text" style="width:90%" required>
+<input id="home_state_adress" name="home_state_address" class="w3-input" type="text" style="width:90%" required>
 <label>home state adress</label></p>
 
 <p>
@@ -73,7 +73,7 @@
 <label>Stay logged in</label></p>
 
 <p>
-<button class="w3-button w3-section w3-teal w3-ripple"> Sign Up </button></p>
+<button class="w3-button w3-section w3-teal w3-ripple"> Sing Up </button></p>
 
 </form>
 
