--- a/rorschach_Website/templates/homepage/homepage.html
+++ b/rorschach_Website/templates/homepage/homepage.html
@@ -64,7 +64,7 @@ body, html {
     <a href="#portfolio" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PORTFOLIO</a>
     <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
     <a onclick="document.getElementById('id01').style.display='block'" class="w3-bar-item w3-button w3-hide-small">LOGIN</a>
-    <a href="./signUp/signUp/" class="w3-bar-item w3-button w3-hide-small">Sign Up</a>
+    <a href="{% url 'FichaUsuario:signUp' %}" class="w3-bar-item w3-button w3-hide-small">Sign Up</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red"><i class="fa fa-search"></i></a>
   </div>
 
@@ -74,7 +74,7 @@ body, html {
     <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">PORTFOLIO</a>
     <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
     <a href="#" class="w3-bar-item w3-button" onclick="toggleFunction();document.getElementById('id01').style.display='block'">LOGIN</a>
-    <a href="./signUp/signUp/" class="w3-bar-item w3-button" onclick="toggleFunction()" >Sign Up</a>
+    <a href="{% url 'FichaUsuario:signUp' %}" class="w3-bar-item w3-button" onclick="toggleFunction()" >Sign Up</a>
     <a href="#" class="w3-bar-item w3-button">SEARCH</a>
   </div>
 </div>
@@ -88,13 +88,13 @@ body, html {
         <img src="img_avatar4.png" alt="Avatar" style="width:30%" class="w3-circle w3-margin-top">
       </div>
 
-      <form class="w3-container" action="./loginUser/loginUser/" method="post">
+      <form class="w3-container" action="{% url 'FichaUsuario:loginUser' %}" method="post">
           {% csrf_token %}
         <div class="w3-section">
           <label><b>Username</b></label>
-          <input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter Username" name="login" required>
+          <input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter Username" name="login" required="">
           <label><b>Password</b></label>
-          <input class="w3-input w3-border" type="password" placeholder="Enter Password" name="password" required>
+          <input id="password" class="w3-input w3-border" type="password" placeholder="Enter Password" name="password" required="">
           <button class="w3-button w3-block w3-green w3-section w3-padding" type="submit">Login</button>
           <input class="w3-check w3-margin-top" type="checkbox" checked="checked"> Remember me
         </div>
