Versão de template corrigida

--- a/rorschach_Website/templates/homepage/register.html
+++ b/rorschach_Website/templates/homepage/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<!-- W3.CSS Template. Disponivel em https://www.w3schools.com/w3css/tryw3css_examples_login.htm-->
+<!-- Utilizamos o W3.CSS Template como base. Disponivel em https://www.w3schools.com/w3css/tryw3css_examples_login.htm-->
 <html>
-<title>W3.CSS</title>
+<title>Sign Up</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
@@ -37,7 +37,7 @@
 <label>country</label></p>
 
 <p>
-<input id="home_state_adress" name="home_state_address" class="w3-input" type="text" style="width:90%" required>
+<input id="home_state_address" name="home_state_address" class="w3-input" type="text" style="width:90%" required>
 <label>home state adress</label></p>
 
 <p>
@@ -73,7 +73,7 @@
 <label>Stay logged in</label></p>
 
 <p>
-<button class="w3-button w3-section w3-teal w3-ripple"> Sing Up </button></p>
+<button class="w3-button w3-section w3-teal w3-ripple"> Sign Up </button></p>
 
 </form>
 
