Fim dos PKs nas URLs, fim do get_context, limpeza do código

--- a/rorschach_Website/templates/homepage/myAccount.html
+++ b/rorschach_Website/templates/homepage/myAccount.html
@@ -18,7 +18,7 @@
     <input type="submit" value="Update" name='_save'/>
  
 </form>
-<button onclick="location.href='{% url 'homepage:perfil' pk %}'" class="w3-button w3-section w3-teal w3-ripple"> Get Back </button></p>
+<button onclick="location.href='{% url 'homepage:perfil' %}'" class="w3-button w3-section w3-teal w3-ripple"> Get Back </button></p>
 </div>
 
 </body>
