--- a/rorschach_Website/templates/homepage/album.html
+++ b/rorschach_Website/templates/homepage/album.html
@@ -2,8 +2,16 @@
 <!-- W3.CSS Template. Disponivel em https://www.w3schools.com/w3css/tryw3css_examples_login.htm-->
 <html>
 <title>Rorschach</title>
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-blue-grey.css">
+<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans'>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
+</style>
 <body>
 
 <header class="w3-container w3-teal">
@@ -29,12 +37,54 @@
          <i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> {{number_pictures}}</p>
     </div>
     <p>
-     <a href="{% url 'homepage:addPicture' %}">
+     <a href="{% url 'homepage:addPicture' albumpk %}">
                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>&nbsp; Add New Photo
      </a>
     </p>
-
+    <div class="w3-card-2 w3-round">
+        <div class="w3-white">
+<button onclick="myFunction('Demo3')" class="w3-button w3-block w3-theme-l1 w3-left-align"><i class="fa fa-users fa-fw w3-margin-right"></i> My Photos</button>
+          <div id="Demo3" class="w3-hide w3-container">
+         <div class="w3-row-padding">
+         <br>
+           <div class="w3-half">
+             <ul>
+             <li>
+             {% for picture in all_picture %}
+                <img onclick="location.href='{% url 'homepage:picture' picture.pk %}'" src="{{picture_logo}}" style="width:100%" class="w3-margin-bottom">
+                {%empty%}
+                <p>No Photos. To upload photos, create an album.</p>
+             {% endfor %}
+             </li>
+             </ul>
+    
+           </div>
+           
+         </div>
+          </div>
 </div>
-
+        </div>
+</div>
+    <script>
+function myFunction(id) {
+    var x = document.getElementById(id);
+    if (x.className.indexOf("w3-show") === -1) {
+        x.className += " w3-show";
+        x.previousElementSibling.className += " w3-theme-d1";
+    } else { 
+        x.className = x.className.replace("w3-show", "");
+        x.previousElementSibling.className = 
+        x.previousElementSibling.className.replace(" w3-theme-d1", "");
+    }
+}
+function openNav() {
+    var x = document.getElementById("navDemo");
+    if (x.className.indexOf("w3-show") === -1) {
+        x.className += " w3-show";
+    } else { 
+        x.className = x.className.replace(" w3-show", "");
+    }
+}
+</script>
 </body>
 </html> 
