--- a/rorschach_Website/templates/homepage/perfil.html
+++ b/rorschach_Website/templates/homepage/perfil.html
@@ -29,7 +29,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
       <a href="#" class="w3-bar-item w3-button">Jane likes your post</a>
     </div>
   </div>
-  <a href="{% url 'homepage:myAccount' %}" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large w3-hover-white" title="My Account"><img src="{{view.object.avatar}}" class="w3-circle" style="height:25px;width:25px" alt="Avatar"></a>
+  <a href="{% url 'homepage:myAccount' %}" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large w3-hover-white" title="My Account"><img src="/media/{{view.object.avatar}}" class="w3-circle" style="height:25px;width:25px" alt="Avatar"></a>
  </div>
 </div>
 
@@ -51,7 +51,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
       <div class="w3-card-2 w3-round w3-white">
         <div class="w3-container">
          <h4 class="w3-center">My Profile</h4>
-         <p class="w3-center"><img src="{{view.object.avatar}}" class="w3-circle" style="height:106px;width:106px" alt="Avatar"></p>
+         <p class="w3-center"><img src="/media/{{view.object.avatar}}" class="w3-circle" style="height:106px;width:106px" alt="Avatar"></p>
          <hr>
          <p><i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> {{view.object.username}}</p>
          <p><i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> {{view.object.profession}}</p>
@@ -72,15 +72,15 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
           <div id="Demo2" class="w3-hide w3-container">
             
                <ul>
-               <li>
                
-                {% for album in all_albums %}
-                    <p><a href='{% url "homepage:album" album.id %}'>{{album.album_title}}</a></p>
+               
+                {% for album in view.all_albums %}
+                    <li><a href='{% url "homepage:album" album.id %}'>{{album.album_title}}</a></li>
                    {%empty%}
                     <p>Empty: You don't have any albums</p>
                 {% endfor %}
                
-               </li>
+               
                </ul>
             
             <p>
