--- a/rorschach_Website/templates/homepage/myAccount.html
+++ b/rorschach_Website/templates/homepage/myAccount.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- W3.CSS Template. Disponivel em https://www.w3schools.com/w3css/tryw3css_examples_login.htm-->
+<!-- Utilizamos o W3.CSS Template como base. Disponivel em https://www.w3schools.com/w3css/tryw3css_examples_login.htm-->
 <html>
 <title>W3.CSS</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
