--- a/rorschach_Website/templates/homepage/perfil.html
+++ b/rorschach_Website/templates/homepage/perfil.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<!-- W3.CSS Template. Disponivel em https://www.w3schools.com/w3css/tryw3css_templates_social.htm#-->
+<!-- Utilizamos o W3.CSS Template como base. Disponivel em https://www.w3schools.com/w3css/tryw3css_examples_login.htm-->
 <html>
-<title>W3.CSS Template</title>
+<title>Profile</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -29,7 +29,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
       <a href="#" class="w3-bar-item w3-button">Jane likes your post</a>
     </div>
   </div>
-  <a href="{% url 'homepage:myAccount' %}" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large w3-hover-white" title="My Account"><img src="/media/{{view.object.avatar}}" class="w3-circle" style="height:25px;width:25px" alt="Avatar"></a>
+  <a href="{% url 'homepage:myAccount' %}" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large w3-hover-white" title="My Account"><img src="{{view.object.avatar.url}}" class="w3-circle" style="height:25px;width:25px" alt="Avatar"></a>
  </div>
 </div>
 
@@ -51,9 +51,9 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
       <div class="w3-card-2 w3-round w3-white">
         <div class="w3-container">
          <h4 class="w3-center">My Profile</h4>
-         <p class="w3-center"><img src="/media/{{view.object.avatar}}" class="w3-circle" style="height:106px;width:106px" alt="Avatar"></p>
+         <p class="w3-center"><img src="{{view.object.avatar.url}}" class="w3-circle" style="height:106px;width:106px" alt="Avatar"></p>
          <hr>
-         <p><i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> {{view.object.username}}</p>
+         <p><i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> {{view.object.name}}</p>
          <p><i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> {{view.object.profession}}</p>
          <p><i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i> {{view.object.home_state_address}},{{view.object.country}}</p>
          <p><i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> {{view.object.age}}</p>
