--- a/rorschach_Website/templates/homepage/register.html
+++ b/rorschach_Website/templates/homepage/register.html
@@ -33,7 +33,6 @@
 <label>email account</label></p>
 
 <p>
-<input >
 <select id="country" name="country" class="w3-select" style="width:90%" required>
 <option value="">Country...</option>
 <option value="AF">Afghanistan</option>
@@ -284,7 +283,8 @@
 <option value="ZM">Zambia</option>
 <option value="ZW">Zimbabwe</option>
 </select>
-<label>country</label></p>
+    <p>
+<label>country</label></p></p>
 
 <p>
 <input id="home_state_address" name="home_state_address" class="w3-input" type="text" style="width:90%" required>
