--- a/rorschach_Website/templates/homepage/addPicture.html
+++ b/rorschach_Website/templates/homepage/addPicture.html
@@ -18,7 +18,9 @@
     <input type="submit" value="Update" name='_save'/>
  
 </form>
-
+    <div>
+    <button onclick="location.href='{% url 'homepage:perfil' %}'" class="w3-button w3-section w3-teal w3-ripple"> Get Back </button></p>
+    </div>
 </div>
 
 </body>
