--- a/rorschach_Website/templates/homepage/album.html
+++ b/rorschach_Website/templates/homepage/album.html
@@ -64,6 +64,9 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
           </div>
 </div>
         </div>
+    <div>
+    <button onclick="location.href='{% url 'homepage:perfil' %}'" class="w3-button w3-section w3-teal w3-ripple"> Get Back </button></p>
+    </div>
 </div>
     <script>
 function myFunction(id) {
