--- a/rorschach_Website/templates/homepage/grade.html
+++ b/rorschach_Website/templates/homepage/grade.html
@@ -2,6 +2,10 @@
 <html>
     <head>
 <title>Rate</title>
+<div class="w3-display-topright">
+
+<button onclick="location.href='{% url 'homepage:perfil' %}'" class="w3-button w3-section w3-teal w3-ripple"> Get Back </button>
+</div>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <script>
