--- a/rorschach_Website/templates/homepage/picture.html
+++ b/rorschach_Website/templates/homepage/picture.html
@@ -23,7 +23,9 @@
          <i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> {{genre}}</p>
          
     </div>
-    
+    <div>
+    <button onclick="location.href='{% url 'homepage:perfil' %}'" class="w3-button w3-section w3-teal w3-ripple"> Get Back </button></p>
+    </div>
 </div>
 
 </body>
