--- a/rorschach_Website/templates/homepage/ranking.html
+++ b/rorschach_Website/templates/homepage/ranking.html
@@ -7,7 +7,11 @@
 <body>
 
 <div class="w3-container w3-teal">
-<h1>Ranking</h1>
+ <h1>Ranking</h1>
+<div class="w3-display-topright">
+
+<button onclick="location.href='{% url 'homepage:perfil' %}'" class="w3-button w3-section w3-teal w3-ripple"> Get Back </button>
+</div>
 </div>
 
 
