Aperfeiçoamento da estética

--- a/rorschach_Website/templates/homepage/myAccount.html
+++ b/rorschach_Website/templates/homepage/myAccount.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- Utilizamos o W3.CSS Template como base. Disponivel em https://www.w3schools.com/w3css/tryw3css_examples_login.htm-->
 <html>
-<title>W3.CSS</title>
+<title>My Account</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
