--- a/rorschach_Website/templates/homepage/homepage.html
+++ b/rorschach_Website/templates/homepage/homepage.html
@@ -154,19 +154,19 @@ body, html {
 
 <div class="w3-row w3-center w3-dark-grey w3-padding-16">
   <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">14+</span><br>
+    <span class="w3-xlarge">1+</span><br>
     Partners
   </div>
   <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">55+</span><br>
+    <span class="w3-xlarge">2+</span><br>
     Projects Done
   </div>
   <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">89+</span><br>
+    <span class="w3-xlarge">6+</span><br>
     Happy Clients
   </div>
   <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">150+</span><br>
+    <span class="w3-xlarge">2+</span><br>
     Meetings
   </div>
 </div>
@@ -181,7 +181,7 @@ body, html {
 <!-- Container (Portfolio Section) -->
 <div class="w3-content w3-container w3-padding-64" id="portfolio">
   <h3 class="w3-center">OUR WORK</h3>
-  <p class="w3-center"><em>Here are some sample images.<br> Click on the images to make them bigger</em></p><br>
+  <p class="w3-center"><em>Here are some sample images that users could add.<br> Click on the images to make them bigger</em></p><br>
 
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
@@ -249,7 +249,7 @@ body, html {
       <div class="w3-large w3-margin-bottom">
         <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> São José dos Campos, Brazil<br>
         <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: +55 12 3979-7891<br>
-        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: <br>
+        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: rorschach@gamdev.com.br<br>
       </div>
       <p>Swing by for a cup of <i class="fa fa-coffee"></i>, or leave a note:</p>
       <form action="" target="_blank">
@@ -282,7 +282,7 @@ body, html {
     <i class="fa fa-linkedin w3-hover-opacity"></i>
   </div>
   <p> CES-22 ITA </p>
-  <p>We thanks <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">W3.CSS</a> for the templates.</p>
+  <p>We thanks <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">W3.CSS</a> for the CSS templates.</p>
 </footer>
  
 
