--- a/rorschach_Website/templates/homepage/perfil.html
+++ b/rorschach_Website/templates/homepage/perfil.html
@@ -18,11 +18,8 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
  <div class="w3-bar w3-theme-d2 w3-left-align w3-large">
   <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
   <a href="{%url 'homepage:index' %}" class="w3-bar-item w3-button w3-padding-large w3-theme-d4"><i class="fa fa-home w3-margin-right"></i>Rorschach</a>
-  <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" title="News"><i class="fa fa-globe"></i></a>
-  <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" title="Account Settings"><i class="fa fa-user"></i></a>
-  <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" title="Messages"><i class="fa fa-envelope"></i></a>
   <div class="w3-dropdown-hover w3-hide-small">
-    <button class="w3-button w3-padding-large" title="Rankings"><i class="fa fa-bell"></i><span class="w3-badge w3-right w3-small w3-green">3</span></button>     
+    <button class="w3-button w3-padding-large" title="Rankings"><i class="fa fa-globe"></i><span class="w3-badge w3-right w3-small w3-green">Ranking</span></button>     
     <div class="w3-dropdown-content w3-card-4 w3-bar-block" style="width:300px">
 	{% for category in listCategory %}
     <a onclick="location.href='{% url 'FichaUsuario:rank' category.name 7 %}'" class="w3-bar-item w3-button">{{category.name}} </a>
@@ -53,8 +50,8 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
          <h4 class="w3-center">My Profile</h4>
          <p class="w3-center"><img src="{{view.object.avatar.url}}" class="w3-circle" style="height:106px;width:106px" alt="Avatar"></p>
          <hr>
-         <p><i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> {{view.object.name}}</p>
-         <p><i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> {{view.object.profession}}</p>
+         <p><i class="fa  fa-fw w3-margin-right w3-text-theme"></i> {{view.object.name}}</p>
+         <p><i class="fa  fa-fw w3-margin-right w3-text-theme"></i> {{view.object.profession}}</p>
          <p><i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i> {{view.object.home_state_address}},{{view.object.country}}</p>
          <p><i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> {{view.object.age}}</p>
         </div>
@@ -92,22 +89,14 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
       </div>
       <br>
       
-      <!-- Interests --> 
+      <!-- Genres --> 
       <div class="w3-card-2 w3-round w3-white w3-hide-small">
         <div class="w3-container">
-          <p>Interests</p>
+          <p>Genres Today</p>
           <p>
-            <span class="w3-tag w3-small w3-theme-d5">News</span>
-            <span class="w3-tag w3-small w3-theme-d4">W3Schools</span>
-            <span class="w3-tag w3-small w3-theme-d3">Labels</span>
-            <span class="w3-tag w3-small w3-theme-d2">Games</span>
-            <span class="w3-tag w3-small w3-theme-d1">Friends</span>
-            <span class="w3-tag w3-small w3-theme">Games</span>
-            <span class="w3-tag w3-small w3-theme-l1">Friends</span>
-            <span class="w3-tag w3-small w3-theme-l2">Food</span>
-            <span class="w3-tag w3-small w3-theme-l3">Design</span>
-            <span class="w3-tag w3-small w3-theme-l4">Art</span>
-            <span class="w3-tag w3-small w3-theme-l5">Photos</span>
+	{% for category in listCategory %}
+    		<span class="w3-tag w3-small w3-theme-d{{ forloop.counter }}">{{category.name}}</span>
+     	{%endfor%}
           </p>
         </div>
       </div>
@@ -121,14 +110,35 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
         <p><strong>Welcome!</strong></p>
         <p>Create albums and add photos. Or grade some photos from comunity!</p>
       </div>
+
+	<div class="w3-container w3-display-container w3-round w3-theme-l4 w3-border w3-theme-border w3-margin-bottom w3-hide-small">
+        <span onclick="this.parentElement.style.display='none'" class="w3-button w3-theme-l3 w3-display-topright">
+          <i class="fa fa-remove"></i>
+        </span>
+        <p><strong>Instructions</strong></p>
+        <p>See the ranking or edit your account on the top bar. Click in My Albums to add albums and images. Clink on the links to rate images.</p>
+      </div>
     
     <!-- End Left Column -->
     </div>
     
     <!-- Middle Column -->
     <div class="w3-col m7">
+
+      <div class="w3-row-padding">
+        <div class="w3-col m12">
+          <div class="w3-card-2 w3-round w3-white">
+            <div class="w3-container w3-padding">
+              <h3> Select a Genre to Vote</h3>
+            </div>
+          </div>
+        </div>
+      </div>
      {% for category in listCategory %}
-    <button onclick="location.href='{% url 'FichaUsuario:grade' category.name %}'" class="w3-button w3-block w3-theme-l1 w3-left-align"><i class="fa fa-circle-o-notch fa-fw w3-margin-right"></i> {{category.name}} </button>
+      <div class="w3-container w3-card-2 w3-white w3-round w3-margin"><br>
+    		<button onclick="location.href='{% url 'FichaUsuario:grade' category.name %}'" class="w3-button w3-block w3-theme-l1 w3-left-align"><i class="fa fa-circle-o-notch fa-fw w3-margin-right"></i> {{category.name}} </button>
+<br>
+      </div>
      {%endfor%}
           
       
@@ -145,10 +155,12 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
 <!-- Footer -->
 <footer class="w3-container w3-theme-d3 w3-padding-16">
   <h5>Partners and Contributers</h5>
+<p>Dylan Nakandakari Sugimoto </p>
+<p>Gabriel Adriano de Melo </p>
 </footer>
 
 <footer class="w3-container w3-theme-d5">
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+  <p>CES-22 Project</p>
 </footer>
  
 <script>
